src/styles/main.css
@import "./fonts.css";
@import "tailwindcss";

@theme {
  --font-primary: "Mulish", system-ui, sans-serif;
  --font-numerical: "Play", system-ui, sans-serif;

  --color-dusty-grape: #6e44c2;
  --color-alabaster-grey: #daddd8;
  --color-soft-linnen: #ecebe4;
  --color-platinum: #f9fffa;
  --color-black: #080705;
  --color-gold: #f0d066;
}

.markdown {
  ul {
    list-style-type: disc;
    padding-left: 1.5rem;
  }

  p {
    text-align: left;
  }

  &.content-markdown {
    p {
      text-align: justify;
    }
  }
}

.shadow-effect {
  overflow: visible;
  border-radius: 24px;
  position: relative;
  z-index: 0;
}

.shadow-effect-offset::after {
  top: -0.5rem !important;
}

.shadow-effect::after {
  content: "";
  height: 100%;
  width: calc(100% - 1rem);
  position: absolute;
  background-color: var(--color-dusty-grape);
  z-index: -1;
  top: 0;
  left: 0.5rem;
  border-radius: 1.5rem;
}

.backdrop-glass {
  background: rgba(0, 0, 0, 0.15);
  border-radius: 1.5rem;
  position: relative;
  z-index: 0;
  box-shadow:
    0 0 1px 1px rgba(0, 0, 0, 0.25) inset,
    0 0 3px 2px rgba(255, 255, 255, 0.7) inset;
}

.image-glass {
  overflow: hidden;
}

.image-glass img {
  transition: transform 0.5s ease-in-out;
}

.image-glass:hover img {
  transform: scale(1.1);
}

.image-shadow {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  box-shadow:
    0 0 2px 1px rgba(0, 0, 0, 0.5) inset,
    0 0 6px 2px rgba(255, 255, 255, 1) inset;
  border-radius: 1.5rem;
}

.image-shadow::before {
  content: "";
  border: 1px solid red;
  background-image: url("../assets/images/noise.svg#grainy");
  background-repeat: repeat;
  background-size: 6rem 6rem;
  filter: grayscale(100%);
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0.2;
  border-radius: 1.5rem;
}

.backdrop-glass-offset {
  backdrop-filter: blur(0.2rem) !important;
  -webkit-backdrop-filter: blur(0.2rem);
  transition: backdrop-filter 0.3s ease-in-out;
}

.backdrop-glass-offset:hover {
  backdrop-filter: blur(2rem) !important;
  -webkit-backdrop-filter: blur(0);
}

.backdrop-glass::before {
  content: "";
  background-image: url("../assets/images/noise.svg#grainy");
  background-repeat: repeat;
  background-size: 6rem 6rem;
  filter: grayscale(100%);
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  opacity: 0.2;
  z-index: -1;
  border-radius: 1.5rem;
}

.button-glass {
  transition:
    backdrop-filter 0.3s ease-in-out,
    box-shadow 0.3s ease-in-out;
  position: relative;
  box-shadow:
    0 0 2px 1px rgba(0, 0, 0, 0.7) inset,
    0 0 6px 2px rgba(255, 255, 255, 0.6) inset;
  backdrop-filter: blur(1.5rem) !important;
  -webkit-backdrop-filter: blur(1.5rem);
}

.button-glass:hover {
  backdrop-filter: blur(0) !important;
  -webkit-backdrop-filter: blur(0);
  box-shadow: none;
}

.button-shadow::after {
  transition:
    transform 0.3s ease-in-out,
    width 0.3s ease-in-out;
  background-color: var(--color-black);
  width: 100%;
  left: 0;
  pointer-events: none;
  transform: translateY(-0.5rem) translateX(0.5rem);
  width: calc(100% - 1rem);
  /* background-color: var(--color-gold); */
}

.button-shadow:hover::after {
  width: calc(100%);
  transform: translateY(0) translateX(0);
}

